# aiodeepl

./: README.md  pyproject.toml
src/aiodeepl/: __init__.py  aioclient.py  translator.py  version.py
