[project]
name = "aiodeepl"
dynamic = ["version"]
readme = "README.md"
license = {file = "LICENSE"}

dependencies = ["aiohttp", "greenback", "deepl", "typing-extensions"]
requires-python = ">= 3.8"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO"
]

[project.urls]
Homepage = "https://github.com/visecy/aiodeepl"
Repository = "https://github.com/visecy/aiodeepl"

[build-system]
requires = ["hatchling"] 
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/aiodeepl/version.py"
